RESOLVED FIXED300885
[GTK][WPE] Fix crash at exit when monitor is disabled with MALLOC_HEAP_BREAKDOWN
https://bugs.webkit.org/show_bug.cgi?id=300885
Summary [GTK][WPE] Fix crash at exit when monitor is disabled with MALLOC_HEAP_BREAKDOWN
Olivier Blin
Reported 2025-10-16 05:49:58 PDT
If the monitor thread has not been started, do not try to join it.
Attachments
Olivier Blin
Comment 1 2025-10-16 05:51:15 PDT
EWS
Comment 2 2025-10-17 00:29:45 PDT
Committed 301695@main (7e412e01fc13): <https://commits.webkit.org/301695@main> Reviewed commits have been landed. Closing PR #52470 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.