[GTK][WPE] Fix crash at exit when monitor is disabled with MALLOC_HEAP_BREAKDOWN https://bugs.webkit.org/show_bug.cgi?id=300885

Reviewed by Michael Catanzaro.

If the monitor thread has not been started, do not try to join it.

* Source/WTF/wtf/malloc_heap_breakdown/main.cpp:
(MallocZoneHeapManager::~MallocZoneHeapManager):

Canonical link: https://commits.webkit.org/301695@main